# falcon-dsl

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: falcon-dsl-config.cmake.in
compiler/: CMakeLists.txt
compiler/src/: parser.y~
local_install/include/falcon-dsl/: FunctionRegistry.hpp  Interpreter.hpp
local_install/share/falcon-dsl/: falcon-dsl-config.cmake  falcon-dsl-targets-release.cmake  falcon-dsl-targets.cmake
ports/falcon-core/: vcpkg.json
ports/falcon-package-manager/: portfile.cmake  vcpkg.json
ports/falcon-typing/: portfile.cmake  vcpkg.json
src/: AutotunerEngine.cpp  FunctionRegistry.cpp
tests/: CMakeLists.txt
tests/integration/: dsl_test_base.hpp
tests/test-autotuners/foreign_function/: ConnectionW.cpp  connection-binding.fal  quantity-struct.fal  routine.fal
